# shirokuro_backend

./: .gitignore  .template.env  README.md  README.rst  alembic.ini  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  serverless.yml
src/apps/account/aws/: account_creator_put_controller.py
src/apps/image_resizer/aws/: image_resizer_aws_get_controller.py
src/apps/lambda/: bootstrap.py
src/apps/lambda/shared/api_controller_aws/: api_controller_aws.py
src/apps/lambda/user/account/: account_creator_put_controller.py
src/apps/migrate/: main.py
src/apps/shared/api_controller/: _api_controller_base.py  _api_exception_http_status_code_mapping.py  api_controller_base.py
src/apps/shared/api_controller/aws/: api_controller_aws.py
src/apps/starlette/: main.py  schema.py
src/apps/user/aws/: user_create_post_controller.py
src/context/: boundary_context.py
src/context/account/application/creator/: account_creator.py  account_creator_command.py
src/context/account/domain/aggregate/: account.py
src/context/account/domain/repository/: account_repository_interface.py
src/context/account/domain/value_object/: password.py  username.py
src/context/account/infrastructure/account_repository/: account_repository_postgres.py
src/context/i18n/migrate/application/: i18n_migrator.py  i18n_migrator_command.py  i18n_migrator_command_data.py
src/context/image_resizer/application/: image_resizer.py  image_resizer_command.py  image_resizer_command_handler.py
src/context/image_resizer/domain/value_object/: uri.py
src/context/shared/application/application/: application.py  application_command.py  application_query.py
src/context/shared/domain/aggregate/: aggregate_root.py
src/context/shared/domain/criteria/: criteria.py  criteria_schema.py
src/context/shared/domain/exception/: error_base.py  error_group.py  invalid_char_set_error.py  invalid_length_error.py  invalid_type_error.py  unit_error.py
src/context/shared/domain/types/: datetime_type.py  email_type.py  id.py  uuid_type.py  var_char_regexp_type.py  var_char_set_type.py  varchar_type.py  (+1 more)
tests/: conftest.py
tests/apps/image_resizer/: image_resizer.feature
tests/apps/image_resizer/aws/: test_image_resizer_aws_get_controller.py
tests/context/i18n/script/: conftest.py
(+171 files in other folders)
